Fix images links

--- a/_posts/2023-01-01-seL4-CHERI.md
+++ b/_posts/2023-01-01-seL4-CHERI.md
@@ -117,10 +117,10 @@ IPC is necessary in a microkernel, as most of the system
 call like features are implemented in user processes. See Figure 1
 
 Figure 1:Purecap Application: Pointers are CHERI caps
-![images](../images/fig-1_purecap-1.png)
+![images](https://sid-agrawal.ca/images/fig-1_purecap-1.png)
 
 Figure 2:seL4: new permissions for endpoints
-![images](../images/fig-2_new-endpoint-perms.png)
+![images](https://sid-agrawal.ca/images/fig-2_new-endpoint-perms.png)
 
 So, we plan to extend the IPC mechanism in seL4. We
 will add new permissions to the endpoint capability in seL4 to
@@ -155,10 +155,10 @@ over the root CHERI capability to the root-task.
 
 
 Figure 3:Purecap Application: Restricted Endpoints
-![image](../images/fig-3_purecap-2.png)
+![image](https://sid-agrawal.ca/images/fig-3_purecap-2.png)
 
 Figure 4:Fine Grained Sealing Cap ranges
-![image](../images/fig_4-sealing-range.png)
+![image](https://sid-agrawal.ca/images/fig_4-sealing-range.png)
 
 ## CHERI Vs. seL4 capabilities
 |                      | CHERI                                    | seL4                                            |
