Update small things

--- a/_posts/2023-01-01-seL4-CHERI.md
+++ b/_posts/2023-01-01-seL4-CHERI.md
@@ -1,12 +1,16 @@
-# Getting seL4 running on Morello
-
+---
+layout: posts
+title:  "Experience of running hybrid CHERI userspace on seL4"
+date: 2023-01-01
+categories: seL4, CHERI, morello, aarch64, cheribsd
+---
 | This post is a WIP.
 
 | This work done during my internship at ARM Research in the summer of 2022. The video[5] and slides are available here
 
-## INTRODUCTION
 CHERI [6] is an architectural extension that adds HW capabilities to modern processors.
 Morello [7] is the ARM implementation of CHERI.
+
 <!-- To aid the incremental adoption of CHERI hardware, two
 compilation modes are supported: hybrid and purecap. -->
 
