--- a/_posts/2023-01-01-seL4-CHERI.md
+++ b/_posts/2023-01-01-seL4-CHERI.md
@@ -4,32 +4,17 @@ title:  "Experience of running hybrid CHERI userspace on seL4"
 date: 2023-01-01
 categories: seL4, CHERI, morello, aarch64, cheribsd
 ---
-| This post is a WIP.
 
-| This work done during my internship at ARM Research in the summer of 2022. The video[5] and slides are available here
+| This work was done during my internship at ARM Research in the summer of 2022. 
+The video[5] and slides are available here
 
+In this article, I share the experience of getting to a point where we could run
+userspace applications in seL4 which had CHERI capabilities enabled(Hybrid mode).
 CHERI [6] is an architectural extension that adds HW capabilities to modern processors.
 Morello [7] is the ARM implementation of CHERI.
-
-<!-- To aid the incremental adoption of CHERI hardware, two
-compilation modes are supported: hybrid and purecap. -->
-
-<!-- [I think
-this paragraph ends with ’ARM’s secure enclave, TrustZone, uses
-the capability-based microkernel, seL4.’] -->
-<!-- ARM’s TrustZone uses seL4 because it is formally verified. -->
-SeL4 [8] is a formally verified microkernel widely deployed in security critical applications.
-Since seL4] is formally verified, it might not benefit from CHERI capabilities, 
+SeL4 [8] is a formally verified microkernel widely deployed in security-critical applications.
+Since seL4 is formally verified, it might not benefit from CHERI capabilities, 
 but the user application running on seL4 will still benefit.
-<!-- With the release of Morello, we ask whether we can
-securely extend the ARM TrustZone TCB to include user-level code
-using CHERI capabilities. -->
-<!-- seL4 capabilities capabilities are enforced via system calls
-into the seL4 microkernel, while CHERI capabilities simply limit
-operations upon virtual addresses. 
-[This paragraph should explain
-how this mismatch is fundamental to the problem being discussed
-in this paper.] -->
 
 The model CheriBSD [9] provides for implementing an operating system on CHERI is not well matched to seL4, 
 as CheriBSD is a monolithic kernel and seL4 is a monolithic kernel. 
@@ -38,58 +23,55 @@ capabilities between processes,
 while seL4's microkernel architecture makes passing capabilities a hard requirement.
 
 We designed a three-stage effort to port seL4 to Morello.
-1. Run a hybrid userspace application. We do this because it
+1. [X ] Run a hybrid userspace application. We do this because it
 requires minimal change to the userspace, 
 but it still requires kernel changes.
-2. Run a purecap userspace application which will require port ing of the userspace libraries.
-3. Explore the mapping of CHERI caps to seL4 caps. 
+2. [ ] Run a purecap userspace application which will require porting of the userspace libraries.
+3. [ ] Explore the mapping of CHERI caps to seL4 caps. 
 We decided that this was not the right thing to do.
 
-To date, we have completed the first two stages. 
-We successfully use CHERI capabilities within seL4 userspace and 
-identify challenges that must be met to complete Stage 3.
+To date, we have completed the first stage. 
+We successfully use CHERI capabilities within the seL4 userspace and 
+identify challenges that must be met to complete Stages 2 and 3.
+
 
 # BACKGROUND
 
-This work lies at the intersection of capability-based microkernel
-and capability in hardware. In this section, we describe seL4 – a
-capability-based microkernel, and CHERI – a hardware platform
-with capability enabled instructions.
+This work lies at the intersection of capability-based microkernels and capability in hardware. 
+In this section, we describe seL4 – a capability-based microkernel, 
+and CHERI – a hardware platform with capability-enabled instructions.
 
 ## seL4
-
-SeL4 is a formally verified capability-based microkernel.
-In capability based system, access to system resources is
-granted by unforgeable tokens called capabilities.
-In a microkernel, most functionality provided by a typical
-monolithic kernel is provided by user space servers.
+SeL4 is a formally verified capability-based microkernel. 
+In a microkernel, most functionality provided by a typical monolithic kernel is provided by user-space servers. In a capability-based system, access to system resources is granted by unforgeable tokens called capabilities.
 
 ## CHERI
 
 CHERI (Capability Hardware Enabled RISC Instruction)
-is a hardware instruction set extension that provided hardware
-capabilities.
-CHERI capabilities are 128 bits in size. They contain a virtual
-address, size of the accessible region, and permission with which
-that region can be accessed. CHERI protects its pointers, by en-
-forcing three properties -– provenance, integrity, and monotonicity.
-* Provenance means that capabilities can only be derived from other
+is a hardware instruction set extension that provides hardware capabilities.
+CHERI capabilities are 128 bits in size. 
+They contain a virtual address, size of the accessible region, 
+and permission with which that region can be accessed. 
+CHERI protects its pointers, by enforcing three properties -– provenance, integrity, and monotonicity.
+* **Provenance** means that capabilities can only be derived from other
 valid capabilities and cannot be forged from an address.
-* Integrity means that capabilities stored in memory cannot be modified. 
+* **Integrity** means that capabilities stored in memory cannot be modified. 
 This is achieved by using tagged memory.
-* Monotonicityrequires that, when a capability is stored in a register, 
+* **Monotonicity** requires that, when a capability is stored in a register, 
 it is only possible to reduce its bounds and permissions, 
 e.g., a read-only capability cannot be turned into a read-write one.
 
-| Sealed Capabilities:CHERI capabilities have asealed bit in the 128 bits. When this bit is set, the capability can be neither sealed nor changed. [Further describe how sealing and unsealing is done]
+| Sealed Capabilities: CHERI capabilities have a sealed bit in the 128 bits. 
+When this bit is set, the capability can be neither sealed nor changed. 
+<!-- [Further describe how sealing and unsealing is done] -->
 
 # EXPERIENCE AND LESSONS
 
 Our port of seL4 to Morello proceeded in three stages. Next,
-we describe the three stages and the lesson learned in each stage.
+we describe the three stages, and the lesson learned in each stage.
 ## Hybrid Userspace
 
-Hybrid userspace does not need changes in user applications, 
+Hybrid userspace does not need changes in user applications 
 but still requires changes in the kernel.
 Regardless of the mode of compilation of the application,
 the operating system must be changed to ensure that the new
@@ -102,21 +84,19 @@ CheriBSD is an adequate guide for this.
 ## Purecap Userspace
 
 To take advantage of the spatial memory safety provided by
-CHERI the end goal is to compile the application in Purecapmode.
-[Describe advantages of purecap]
-Unlike the hybrid mode, CheriBSD did not provide an
-adequate reference for the seL4 port. 
-CheriBSD allows the kernel
-to pass capabilities to the user space and vice versa via a system
-call. 
+CHERI's end goal is to compile the application in Purecap mode.
+In purecap mode, every pointer is a CHERI capability so 
+the application gets the benefits of high-level languages like Rust/Python
+with the performance of C/C++.
+Unlike the hybrid mode, CheriBSD did not provide an adequate reference for the seL4 port. 
+CheriBSD allows the kernel to pass capabilities to the user space and vice versa via a system call. 
 However, since passing pointers via IPC is not essential to the
 operation of a monolithic kernel, CheriBSD does not support it.
 It is also not a good idea for two user processes to exchange 
 CHERI capabilities with the mediation from the kernel.
 Since CHERI capabilities are just virtual addresses and not tied to a
 particular address space, this would mean that two colluding pro-
-cesses could grow the range of virtual addresses they have access
-to.
+cesses could grow the range of virtual addresses they have access to.
 IPC is necessary in a microkernel, as most of the system
 call like features are implemented in user processes. See Figure 1
 
@@ -186,26 +166,7 @@ CHERI capabilities do not maintain a derivation tree. For
 example, two capabilities for the same array are independent, and
 there is no single palace to revoke it, short of scanning the entire
 memory range.
-We summarize these differences in Table 1. [Sid(TODO):
-Discuss how Propagation, Restriction, Recovation .. works in both]
-Due to these fundamental differences, the CHERI capabilities are
-not a drop in replacement for the seL4 capabilities.
-Example of parts of the seL4 capability system that can
-be augmented with CHERI capabilities.
-
-- Sealed Capabilities instead of the C-slot identifiers. [Sid(TODO):
-    Describe potential Pros and Cons]
-- Using Sealed Capabilities for control-flow transfer from ker-
-    nel to userspace. [Sid(TODO):Describe potential Pros and
-    Cons. It would also make seL4 a SASOS]
-Though we can implement parts of the seL4 capability
-model using the CHERI instructions. It is unclear whether 1) there
-will be a performance improvements, 2) since it would mean that
-
-### 2
-
-
-
+We summarize these differences in Table 1. 
 Table 1: Comparing seL4 and CHERI caps
 In simple terms, A fat pointer to a Virtual Address range A token to do an operation on a system resource
 Implementation Layer Hardware Kernel
@@ -214,14 +175,37 @@ Restriction Trivial: Register operation Trivial: Retype via kernel
 Revocation Hard: Scan all of the memory Trivial: Scan all CDT
 Accessibility Hard: Scan all of the memory Moderate: Scan all cap lists
 Protection Domain All Caps in accessible memory All caps in the CSpace
-
 we are heading towards a SASOS, would it still be seL4 after the
 changes.
+<!-- Discuss how Propagation, Restriction, Recovation .. works in both] -->
+Due to these fundamental differences, the CHERI capabilities are
+not a drop in replacement for the seL4 capabilities.
 
-# EVALUATION
+
+Example of parts of the seL4 capability system that can
+be augmented with CHERI capabilities.
+
+- Sealed Capabilities instead of the C-slot identifiers.
+- Using Sealed Capabilities for control-flow transfer from kernel to userspace. 
+
+Though we can implement parts of the seL4 capability
+model using the CHERI instructions. It is unclear whether:
+1. There will be an performance improvements
+2. Would that make seL4 a Single Address Space OS(SASOS)?
 
 
-[Sid:Calling it evaluation feels weird. Thoughts?]
+
+
+
+# Closing remarks
+
+This work enables C/C++ user applications on seL4 to use CHERI
+features and get additional security guarantees. We also looked at
+using CHERI capabilities as a replacement for seL4 capabilities and
+concluded that they are fundamentally different. 
+Our work provides a valuable contribution to the growing body of work on porting
+systems software to the CHERI processor, which provides security
+guarantees.
 
 ## Performance
 
@@ -229,41 +213,27 @@ Since we have done QEMU development work, which is not
 cycle accurate, we did not collect performance numbers. Instead,
 we calculate the number of extra instructions required for each
 operation and the extra memory usage due to larger registers.
-[Sid(TODO):Find and cite details(if any) of performance
-numbers of these new instructions and additional cache pressure.]
 
 ## Developer Effort
 
-
-So far, we have spent approximately four months of full-time devel-
-opment effort between two developers. We spent most of the initial
-time understanding the details of seL4 boot-up, context-switch, and
-process startup code. Similarly, time was spent understanding the
+So far, we have spent approximately four months of full-time development effort between two developers. 
+We spent most of the initial time understanding the details of seL4 boot-up, context-switch, and
+process startup code. 
+Similarly, time was spent understanding the
 intricacies of the CHERI capabilities and setting up the toolchain to
-compile seL4 with CHERI. So far, we have modified about 500 lines
-of code. For context, the kernel is about 10K LoC and the userspace
-is 50K LoC. About 30% of the LoC are in the ARM assembly, and
-the rest are in C.
+compile seL4 with CHERI. 
+So far, we have modified about 500 lines of code. 
+For context, the kernel is about 10K LoC and the userspace
+is 50K LoC. About 30% of the LoC are in the ARM assembly, and the rest are in C.
 
 ## Impact on Formal Verification
 
-We added our changes to theaarch64platform-specific code of
-seL4, invalidating the formal verification of seL4. [Sid(TODO):
-Double check with Gerwin Klein from sel4-dev that this is true.]
+We added our changes to the `aarch64` platform-specific code of
+seL4, invalidating the formal verification of seL4. 
 We have tried to keep the changes in the kernel to the most essential.
-But do not have a good sense of how much effort is needed to re-
-verify the kernel.
-
-# SUMMARY
+But do not have a good sense of how much effort is needed to reverify the kernel.
 
 
-This work enables C/C++ user applications on seL4 to use CHERI
-features and get additional security guarantees. We also looked at
-using CHERI capabilities as a replacement for seL4 capabilities and
-concluded that they are fundamentally different. Our work provides
-a valuable contribution to the growing body of work on porting
-systems software to the CHERI processor, which provides security
-guarantees.
 
 # Trying it out
 A readme is available [here](https://gitlab.com/icecap-project/morello/manifest/-/blob/main/README.md)
