Make images pretty

--- a/_posts/2023-01-01-seL4-CHERI.md
+++ b/_posts/2023-01-01-seL4-CHERI.md
@@ -100,11 +100,10 @@ cesses could grow the range of virtual addresses they have access to.
 IPC is necessary in a microkernel, as most of the system
 call like features are implemented in user processes. See Figure 1
 
-Figure 1:Purecap Application: Pointers are CHERI caps
-![images](https://sid-agrawal.ca/images/fig-1_purecap-1.png)
 
-Figure 2:seL4: new permissions for endpoints
-![images](https://sid-agrawal.ca/images/fig-2_new-endpoint-perms.png)
+|Fig 1: Purecap: Pointers are CHERI Caps| Fig 2: New Endpoint Permissions|
+|:-:|:-:|
+|![Purecap: Pointers are CHERI Caps](https://sid-agrawal.ca/images/fig-1_purecap-1.png) |![New Endpoint Permissions](https://sid-agrawal.ca/images/fig-2_new-endpoint-perms.png)|
 
 So, we plan to extend the IPC mechanism in seL4. We
 will add new permissions to the endpoint capability in seL4 to
@@ -138,11 +137,9 @@ available seL4 capabilities in the system. In that spirit, we hand
 over the root CHERI capability to the root-task.
 
 
-Figure 3:Purecap Application: Restricted Endpoints
-![image](https://sid-agrawal.ca/images/fig-3_purecap-2.png)
-
-Figure 4:Fine Grained Sealing Cap ranges
-![image](https://sid-agrawal.ca/images/fig_4-sealing-range.png)
+|Fig 3: Purecap: Restricted Endpoints| Fig 4:Fine Grained Sealing Cap ranges |
+|:-:|:-:|
+|![Purecap: Restricted Endpoints](https://sid-agrawal.ca/images/fig-1_purecap-1.png) |![Fine Grained](https://sid-agrawal.ca/images/fig_4-sealing-range.png)|
 
 ## CHERI Vs. seL4 capabilities
 |                      | CHERI                                    | seL4                                            |
@@ -237,6 +234,8 @@ But do not have a good sense of how much effort is needed to reverify the kernel
 
 # Trying it out
 A readme is available [here](https://gitlab.com/icecap-project/morello/manifest/-/blob/main/README.md)
+
+Continue the conversation on the `#seL4` channel on the [CHERI Slack](https://www.cl.cam.ac.uk/research/security/ctsrd/cheri/cheri-slack.html).
 
 # A APPENDIX
 
