Update main page

--- a/_posts/2023-01-01-seL4-CHERI.md
+++ b/_posts/2023-01-01-seL4-CHERI.md
@@ -164,7 +164,7 @@ example, two capabilities for the same array are independent, and
 there is no single palace to revoke it, short of scanning the entire
 memory range.
 We summarize these differences in Table 1. 
-Table 1: Comparing seL4 and CHERI caps
+`Table 1`: Comparing seL4 and CHERI caps
 In simple terms, A fat pointer to a Virtual Address range A token to do an operation on a system resource
 Implementation Layer Hardware Kernel
 Propagation Trivial: Register Load/Store Trivial: Mint via kernel
