Update main page

--- a/_posts/2023-01-01-seL4-CHERI.md
+++ b/_posts/2023-01-01-seL4-CHERI.md
@@ -237,21 +237,16 @@ A readme is available [here](https://gitlab.com/icecap-project/morello/manifest/
 
 Continue the conversation on the `#seL4` channel on the [CHERI Slack](https://www.cl.cam.ac.uk/research/security/ctsrd/cheri/cheri-slack.html).
 
-# A APPENDIX
+# APPENDIX
 
-## A.1 Kernel Changes for Hybrid Userspace
+A list of kernel and userspace changes for Hybrid Userspace
 
-- Enable Morello instructions, without which every new Morello
-    instruction will fail.
-- Enable the loading and storage of CHERI capabilities in mem-
-    ory.
-- Update the context-switch code to save and restore new
-    registers.
-- Update system calls to handle new registers. [Sid(TODO):
-    Add, update how?]
-- Setup andProgram Counter Capability(PCC) andDefault
-    Data Capability(DDC) when starting a new process.
-- Pass part of theMAX_CAPto the user process.
+- Enable Morello instructions, without which every new Morello instruction will fail.
+- Enable the loading and storage of CHERI capabilities in memory.
+- Update the context-switch code to save and restore new registers.
+- Update system calls to handle new registers. 
+- Setup Program Counter Capability(`PCC`) and Default Data Capability(`DDC`) when starting a new process.
+- Pass part of the `MAX_CAP` to the user process.
 
 
 # REFERENCES
@@ -270,10 +265,10 @@ Continue the conversation on the `#seL4` channel on the [CHERI Slack](https://ww
 
 [5] [Internship Presentation Video](https://drive.google.com/file/d/1Sew8KgZ7dXT8l-lwKtyA5-T-6tpgWtD9/view?usp=sharing)
 
-[6] https://www.cl.cam.ac.uk/research/security/ctsrd/cheri/
+[6] [CHERI Page](https://www.cl.cam.ac.uk/research/security/ctsrd/cheri/)
 
-[7] https://www.arm.com/architecture/cpu/morello
+[7] [Morello](https://www.arm.com/architecture/cpu/morello)
  
-[8] https://sel4.systems/
+[8] [seL4 Microkernel](https://sel4.systems/)
 
-[9] https://www.cl.cam.ac.uk/research/security/ctsrd/cheri/cheribsd.html
+[9] [CHERI BSD](https://www.cl.cam.ac.uk/research/security/ctsrd/cheri/cheribsd.html)
