Good enough for now

--- a/_posts/2023-01-01-seL4-CHERI.md
+++ b/_posts/2023-01-01-seL4-CHERI.md
@@ -5,8 +5,6 @@ date: 2023-01-01
 categories: seL4, CHERI, morello, aarch64, cheribsd
 ---
 
-| This work was done during my internship at ARM Research in the summer of 2022. 
-The video[5] and slides are available here
 
 In this article, I share the experience of getting to a point where we could run
 userspace applications in seL4 which had CHERI capabilities enabled(Hybrid mode).
@@ -23,7 +21,7 @@ capabilities between processes,
 while seL4's microkernel architecture makes passing capabilities a hard requirement.
 
 We designed a three-stage effort to port seL4 to Morello.
-1. [X ] Run a hybrid userspace application. We do this because it
+1. [X] Run a hybrid userspace application. We do this because it
 requires minimal change to the userspace, 
 but it still requires kernel changes.
 2. [ ] Run a purecap userspace application which will require porting of the userspace libraries.
@@ -249,12 +247,16 @@ A list of kernel and userspace changes for Hybrid Userspace
 - Setup Program Counter Capability(`PCC`) and Default Data Capability(`DDC`) when starting a new process.
 - Pass part of the `MAX_CAP` to the user process.
 
+# Acknowledgments
+
+This work was done during my internship at ARM Research in the summer of 2022. 
+During this internship, I was mentored by Chris Haster and [Eric VH](https://about.me/ericvh).
+I also received constant guidance and help from Jessica Clark, John Baldwin, 
+and Robert Watson from the CHERI community.
+
+The video[5] of the final presentation is available.
 
 # REFERENCES
-
-
-
-
 
 [1] The kernel(bulk of changes): [diff](https://gitlab.com/icecap-project/seL4/-/compare/pre-morello-upstream-sel4...morello?from_project_id=22234764&page=2)
 
