Good enough for now

--- a/_posts/2023-01-01-seL4-CHERI.md
+++ b/_posts/2023-01-01-seL4-CHERI.md
@@ -151,62 +151,43 @@ over the root CHERI capability to the root-task.
 | Accessibility        | Hard: Scan all of the memory             | Moderate: Scan all cap lists                    |
 | Protection Domain    | All Caps in accessible memory            | All caps in the CSpace                          |
 
+`Table 1`: Comparing seL4 and CHERI caps
 
 Capabilities in seL4 are tokens for calling methods on system
 objects. They are implemented in the kernel using the system call
 mechanism.
-Revocation is an important feature of the seL4 capability
-model, and the kernel maintains aCavailabilityDerivationTree
+Revocation is an essential feature of the seL4 capability model, 
+and the kernel maintains a `Capailability Derivation Tree`
 (CDT) to assist in revocation.
-CHERI capabilities do not maintain a derivation tree. For
-example, two capabilities for the same array are independent, and
-there is no single palace to revoke it, short of scanning the entire
-memory range.
-We summarize these differences in Table 1. 
-`Table 1`: Comparing seL4 and CHERI caps
-In simple terms, A fat pointer to a Virtual Address range A token to do an operation on a system resource
-Implementation Layer Hardware Kernel
-Propagation Trivial: Register Load/Store Trivial: Mint via kernel
-Restriction Trivial: Register operation Trivial: Retype via kernel
-Revocation Hard: Scan all of the memory Trivial: Scan all CDT
-Accessibility Hard: Scan all of the memory Moderate: Scan all cap lists
-Protection Domain All Caps in accessible memory All caps in the CSpace
-we are heading towards a SASOS, would it still be seL4 after the
-changes.
-<!-- Discuss how Propagation, Restriction, Recovation .. works in both] -->
+CHERI capabilities do not maintain a derivation tree. 
+For example, two capabilities for the same array are independent, and
+there is no single palace to revoke it short of scanning the entire memory range.
+
+We summarize these differences in the table above.
 Due to these fundamental differences, the CHERI capabilities are
-not a drop in replacement for the seL4 capabilities.
+not a drop-in replacement for the seL4 capabilities.
 
 
-Example of parts of the seL4 capability system that can
-be augmented with CHERI capabilities.
-
+Having said that, some parts of the seL4 capability system could be augmented with CHERI capabilities.
+For instance:
 - Sealed Capabilities instead of the C-slot identifiers.
 - Using Sealed Capabilities for control-flow transfer from kernel to userspace. 
 
-Though we can implement parts of the seL4 capability
-model using the CHERI instructions. It is unclear whether:
-1. There will be an performance improvements
-2. Would that make seL4 a Single Address Space OS(SASOS)?
-
-
-
-
+However, it is unclear whether:
+1. There will be any performance improvements
+2. Would that make seL4 a Single Address Space OS(SASOS)? Especially if the user/kernel boundary gets fuzzy.
 
 # Closing remarks
 
-This work enables C/C++ user applications on seL4 to use CHERI
-features and get additional security guarantees. We also looked at
-using CHERI capabilities as a replacement for seL4 capabilities and
+This work is a small step in getting C/C++ user applications on seL4 to use CHERI
+features and get additional security guarantees. 
+We also looked at using CHERI capabilities as a replacement for seL4 capabilities and
 concluded that they are fundamentally different. 
-Our work provides a valuable contribution to the growing body of work on porting
-systems software to the CHERI processor, which provides security
-guarantees.
 
 ## Performance
 
 Since we have done QEMU development work, which is not
-cycle accurate, we did not collect performance numbers. Instead,
+cycle-accurate, we did not collect performance numbers. Instead,
 we calculate the number of extra instructions required for each
 operation and the extra memory usage due to larger registers.
 
@@ -215,12 +196,11 @@ operation and the extra memory usage due to larger registers.
 So far, we have spent approximately four months of full-time development effort between two developers. 
 We spent most of the initial time understanding the details of seL4 boot-up, context-switch, and
 process startup code. 
-Similarly, time was spent understanding the
-intricacies of the CHERI capabilities and setting up the toolchain to
-compile seL4 with CHERI. 
+Similarly, time was spent understanding the intricacies of the CHERI capabilities and 
+setting up the toolchain to compile seL4 with CHERI. 
 So far, we have modified about 500 lines of code. 
-For context, the kernel is about 10K LoC and the userspace
-is 50K LoC. About 30% of the LoC are in the ARM assembly, and the rest are in C.
+For context, the kernel is about 10K LoC, and the userspace is 50K LoC. 
+About 30% of the diff is in the ARM assembly, and the rest in C.
 
 ## Impact on Formal Verification
 
