--- a/_posts/2023-01-01-seL4-CHERI.md
+++ b/_posts/2023-01-01-seL4-CHERI.md
@@ -7,7 +7,7 @@ categories: seL4, CHERI, morello, aarch64, cheribsd
 
 
 In this article, I share the experience of getting to a point where we could run
-userspace applications in seL4 which had CHERI capabilities enabled(Hybrid mode).
+userspace applications in seL4, which had CHERI capabilities enabled(Hybrid mode).
 CHERI [6] is an architectural extension that adds HW capabilities to modern processors.
 Morello [7] is the ARM implementation of CHERI.
 SeL4 [8] is a formally verified microkernel widely deployed in security-critical applications.
@@ -48,9 +48,9 @@ In a microkernel, most functionality provided by a typical monolithic kernel is 
 CHERI (Capability Hardware Enabled RISC Instruction)
 is a hardware instruction set extension that provides hardware capabilities.
 CHERI capabilities are 128 bits in size. 
-They contain a virtual address, size of the accessible region, 
+They contain a virtual address, the size of the accessible region, 
 and permission with which that region can be accessed. 
-CHERI protects its pointers, by enforcing three properties -– provenance, integrity, and monotonicity.
+CHERI protects its pointers by enforcing three properties -– provenance, integrity, and monotonicity.
 * **Provenance** means that capabilities can only be derived from other
 valid capabilities and cannot be forged from an address.
 * **Integrity** means that capabilities stored in memory cannot be modified. 
@@ -66,12 +66,12 @@ When this bit is set, the capability can be neither sealed nor changed.
 # EXPERIENCE AND LESSONS
 
 Our port of seL4 to Morello proceeded in three stages. Next,
-we describe the three stages, and the lesson learned in each stage.
+we describe the three stages and the lesson learned in each stage.
 ## Hybrid Userspace
 
 Hybrid userspace does not need changes in user applications 
 but still requires changes in the kernel.
-Regardless of the mode of compilation of the application,
+Regardless of the compilation mode of the application,
 the operating system must be changed to ensure that the new
 registers are saved. 
 Also, memory must be configured so that it
@@ -83,7 +83,7 @@ CheriBSD is an adequate guide for this.
 
 To take advantage of the spatial memory safety provided by
 CHERI's end goal is to compile the application in Purecap mode.
-In purecap mode, every pointer is a CHERI capability so 
+In purecap mode, every pointer is a CHERI capability so,
 the application gets the benefits of high-level languages like Rust/Python
 with the performance of C/C++.
 Unlike the hybrid mode, CheriBSD did not provide an adequate reference for the seL4 port. 
@@ -95,7 +95,7 @@ CHERI capabilities with the mediation from the kernel.
 Since CHERI capabilities are just virtual addresses and not tied to a
 particular address space, this would mean that two colluding pro-
 cesses could grow the range of virtual addresses they have access to.
-IPC is necessary in a microkernel, as most of the system
+IPC is necessary for a microkernel, as most of the system
 call like features are implemented in user processes. See Figure 1
 
 
@@ -111,10 +111,9 @@ and Figure 3.
 Sealed capabilities are CHERI capabilities that cannot be
 dereferenced. A CHERI capability (say, a pointer to an array) can be
 sealed with another CHERI capability (called a sealing capability).
-Once sealed, the capability to the array cannot be deferenced unless
+Once sealed, the capability to the array cannot be dereferenced unless
 it is unsealed by the original sealing capability.
-CheriBSD splits its sealing cap range into only two ranges,
-since there is only a user and a kernel. 
+CheriBSD splits its sealing cap range into only two ranges since there is only a user and a kernel. 
 But in an uKernel system,
 we have the kernel, system services, and user applications, so we
 need to split the sealed caps into at least three ranges. Figure 4
