--- a/_posts/2024-27-11-fuse-pid.md
+++ b/_posts/2024-27-11-fuse-pid.md
@@ -1,9 +1,10 @@
 ---
 layout: posts
-title:  "Determining the PID of a FUSE Daemon based on the /proc/mounts`
+title:  "Determining the PID of a FUSE Daemon based on the /proc/mounts"
 date: 2024-11-26
 categories: Linux, Docker, mount, namespaces, mount_namespaces
 ---
+
 # Issue
 I am toying with a trivial Passthrough FUSE file system [1] mounted at `/some-path/fusey-files`, the PID of the FUSE daemon is 1234. 
 and I wanted to programmatically find out (using `/proc` or `/sys` or some other kernel interface such as `ioctl`) 
