--- a/_posts/2025-12-19-late-phd.md
+++ b/_posts/2025-12-19-late-phd.md
@@ -1,7 +1,9 @@
-# The Late Bloomer’s Guide to the PhD: Benefits and Unwarranted Advice
-
-**Reading Time:** ~25 Mins
-**Tags:** #PhDLife #MatureStudent #CareerPivot #OSInternal #IndustryVsAcademia
+---
+layout: posts
+title: "The Late Bloomer’s Guide to the PhD: Benefits and Unwarranted Advice"
+date: 2025-12-19
+categories: PhDLife, MatureStudent, CareerPivot, IndustryVsAcademia
+---
 
 ---
 
@@ -74,6 +76,7 @@ If you are in a partnership, the PhD is a shared burden. Often, one spouse remai
 * **The "Never Done" Syndrome:** Unlike a 9-to-5, the PhD follows you home. It sits at the dinner table. It goes on vacation.
 
 ### The Translator's Guide
+
 Stop talking about "pedagogy" or "theoretical frameworks." Use the language of the office to bridge the gap.
 
 | The Academic Term | The "Real World" Translation |
@@ -87,9 +90,11 @@ Stop talking about "pedagogy" or "theoretical frameworks." Use the language of t
 ## Protecting the Exit
 
 ### Set a "Financial Sunset"
+
 Agree on a hard deadline. *"I will do this for $X$ years. If I am not finished or funded by then, we re-evaluate."* This proves to your family—and yourself—that you respect their sacrifice.
 
 ### Redefine "Completion"
+
 In the ivory tower, leaving without a degree is "dropping out." In the real world, it’s a **"strategic pivot."** If you achieve your goal—becoming that OS expert—and a high-level research lab offers you a dream job in year three, **you have won.** You don't need the piece of paper to validate the expertise you've already acquired.
 
 ---
